--- a/hellospring03/pom.xml
+++ b/hellospring03/pom.xml
@@ -9,8 +9,29 @@
 	</parent>
 	<artifactId>hellospring03</artifactId>
 	<packaging>war</packaging>
-	
-	<dependencies>		
+	<properties>
+		<org.springframework-version>4.2.1.RELEASE</org.springframework-version>
+	</properties>
+	<dependencies>
+		<!-- Spring Context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+ 			<artifactId>spring-context</artifactId>
+ 			<version>${org.springframework-version}</version>
+		</dependency>
+		<!-- Spring web MVC -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<!-- Spring Web(DispatcherServlet, ContextLoadListener -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+				
 	</dependencies>
 	
 	<build>
