--- a/emaillist03/pom.xml
+++ b/emaillist03/pom.xml
@@ -7,11 +7,13 @@
 		<artifactId>spring-parctices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hellospring03</artifactId>
+	<artifactId>emaillist03</artifactId>
 	<packaging>war</packaging>
+	
 	<properties>
 		<org.springframework-version>4.2.1.RELEASE</org.springframework-version>
 	</properties>
+	
 	<dependencies>
 		<!-- Spring Context -->
 		<dependency>
@@ -19,29 +21,45 @@
  			<artifactId>spring-context</artifactId>
  			<version>${org.springframework-version}</version>
 		</dependency>
+		
 		<!-- Spring web MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
 		<!-- Spring Web(DispatcherServlet, ContextLoadListener -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>			
+		</dependency>
+		
+		<!-- MariaDB JDBC Driver -->
+		<dependency>
+    		<groupId>org.mariadb.jdbc</groupId>
+    		<artifactId>mariadb-java-client</artifactId>
+    		<version>2.7.2</version>
+		</dependency>
+		
+		<!-- jstl -->
+		<dependency>
+    		<groupId>jstl</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
-		<finalName>hellospring03</finalName>
+		<finalName>emaillist03</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://192.168.80.103:8080/manager/text</url>
-					<path>/hellospring03</path>
+					<path>/emaillist03</path>
 					<username>admin</username>
 					<password>manager</password>
 				</configuration>
@@ -57,5 +75,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	
 </project>
