--- a/emaillist03/src/main/webapp/WEB-INF/web.xml
+++ b/emaillist03/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,24 @@
 	xmlns="http://JAVA.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-	<display-name>hellospring03</display-name>
+	<display-name>emaillist03</display-name>
+
+	<!-- Context Parameter -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+
+	<!-- Context Load Listener -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener> 
 	
 	<!-- DispatcherServlet(Front Controller) -->
 	<servlet>
      	<servlet-name>spring</servlet-name>
     	 <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	</servlet>
-
 	<servlet-mapping>
     	 <servlet-name>spring</servlet-name>
      	<url-pattern>/</url-pattern>
