--- a/guestbook03/src/main/webapp/WEB-INF/web.xml
+++ b/guestbook03/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,8 @@
 	xmlns="http://JAVA.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-	<display-name>emaillist03</display-name>
-
+	<display-name>guestbook03</display-name>
+	
 	<!-- Context Parameter -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
