--- a/fileupload/pom.xml
+++ b/fileupload/pom.xml
@@ -7,8 +7,9 @@
 		<artifactId>spring-parctices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hellospring03</artifactId>
+	<artifactId>fileupload</artifactId>
 	<packaging>war</packaging>
+	
 	<properties>
 		<org.springframework-version>4.3.4.RELEASE</org.springframework-version>
 	</properties>
@@ -19,18 +20,40 @@
  			<artifactId>spring-context</artifactId>
  			<version>${org.springframework-version}</version>
 		</dependency>
+		
 		<!-- Spring web MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
 		<!-- Spring Web(DispatcherServlet, ContextLoadListener -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
+		<!-- Common Fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+		
+		<!-- jstl -->
+		<dependency>
+    		<groupId>jstl</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
+		
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -47,14 +70,14 @@
 	</dependencies>
 	
 	<build>
-		<finalName>hellospring03</finalName>
+		<finalName>fileupload</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://192.168.80.103:8080/manager/text</url>
-					<path>/hellospring03</path>
+					<path>/fileupload</path>
 					<username>admin</username>
 					<password>manager</password>
 				</configuration>
@@ -70,5 +93,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	
 </project>
